--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 TradeLayer-Wallet[[:space:]]Setup[[:space:]]0.0.12.exe filter=lfs diff=lfs merge=lfs -text
+*.AppImage filter=lfs diff=lfs merge=lfs -text
